Add WhatsApp disconnect button and fix API endpoints for Railway

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,22 +116,17 @@
                                 <div class="card-body">
                                     <h5 class="card-title mb-3">Bot Control</h5>
                                     <div class="row g-2">
-                                        <div class="col-md-3">
-                                            <button class="btn btn-success w-100" onclick="reloadBot()">
-                                                <i class="fas fa-sync me-2"></i> Reload Bot
+                                        <div class="col-md-4">
+                                            <button class="btn btn-danger w-100" onclick="disconnectWhatsApp()">
+                                                <i class="fas fa-sign-out-alt me-2"></i> Disconnect WA
                                             </button>
                                         </div>
-                                        <div class="col-md-3">
+                                        <div class="col-md-4">
                                             <button class="btn btn-warning w-100" onclick="clearLogs()">
                                                 <i class="fas fa-trash me-2"></i> Clear Log
                                             </button>
                                         </div>
-                                        <div class="col-md-3">
-                                            <button class="btn btn-info w-100" onclick="testMessage()">
-                                                <i class="fas fa-paper-plane me-2"></i> Test Message
-                                            </button>
-                                        </div>
-                                        <div class="col-md-3">
+                                        <div class="col-md-4">
                                             <button class="btn btn-primary w-100" onclick="getGroups()">
                                                 <i class="fas fa-users me-2"></i> Get Groups
                                             </button>
